# jaxbaby

./: checks.md  pyproject.toml
examples/: steady_state.py
src/core/: model.py
src/solvers/perturbation/: linear.py
src/utils/: neoclassical.py  tauchen.py
